@@ -1,3 +1,6 @@
+Nov 19, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- allow data and localedir to be overridden via environment variables
+
 Nov 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - add Call of Duty master from Activision
 
